<resources>
    <string name="app_name">Done</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="task_name_hint">Enter a name for the task.</string>
    <string name="task_name_label">Task Name:</string>
    <string name="task_assigned_to_label">Assigned To:</string>
    <string name="task_hidden_from_label">Hidden From:</string>
    <string name="task_due_date_label">Due Date:</string>
    <string name="task_reminder_date_label">Reminder Date:</string>
    <string name="task_add_note_label">Add Note:</string>
    <string name="task_add_photo_label">Add Photo:</string>
    <string name="task_completed_label">Completed?</string>
    <string name="task_verified_label">Verified?</string>
    <string name="completed_label">Completion:</string>
    <string name="verified_label">Verification:</string>
<<<<<<< HEAD
=======
    <string name="list_title_picker_title">Name of New List:</string>
    <string name="task_title_picker_title">Name of New Task:</string>
>>>>>>> MichaelAAU-patch-1
    <string name="due_date_picker_title">Task Due Date:</string>
    <string name="reminder_date_picker_title">Task Reminder Date:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="firebase_url">https://doneaau.firebaseio.com/</string>
    <string name="title_activity_login_">Sign in</string>
</resources>
